@@ -3,6 +3,9 @@
 
     o    use isSymmetric(vcov, tol = sqrt(.Machine$double.eps)
          to check for symmetry of covariance matrices in `parm'
+         (suggested by Fritz)
+
+    o    better error messages suggested by Rich
 
 
 		CHANGES in `multcomp' VERSION 1.0-2
